--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+
+<h1>Ruby on Rails Home page</h1>
+<p>Know more about ruby at <a href="#">rubyonrails.com</a></p>
