integration test complete

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
 
-<h1>Ruby on Rails Home page</h1>
-<p>Know more about ruby at <a href="#">rubyonrails.com</a></p>
+<div class="jumbotron center">
+	<h1>Ruby on Rails Home page</h1>
+	<p>Know more about ruby at <a href="#">rubyonrails.com</a></p>
+</div>
+
+<%= image_tag("kitten.jpg") %>
