--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,5 @@
 
-<h1>About</h1>
+<div class="jumbotron">
+	<h1>About</h1>
 <p>You can know all at <a href=#>https://rubyonrails.com</a></p>
+</div>
