finish layout routes user signup

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,6 +2,8 @@
 <div class="jumbotron center">
 	<h1>Ruby on Rails Home page</h1>
 	<p>Know more about ruby at <a href="#">rubyonrails.com</a></p>
+
+	<%= link_to "Sign Up", signup_path , class: "btn btn-lg btn-primary" %>
 </div>
 
 <%= image_tag("kitten.jpg") %>
