--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 	<h1>Sign Up</h1>
 	<p>Sign Up page for new users</p>
 
-	<%= form_for(@user) do |f| %>
+	<%= form_for(@user, url: signup_path) do |f| %>
 		<%= render 'shared/error_messages'%>
 
 		<%= f.label :name %>
