micropost feature added to the app

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,3 +18,13 @@
 	<p>This page was last refreshed at: </p>
 	<%= Time.now %>
 </div>
+
+<div class="col-md-8 jumbotron">
+	<% if @user.microposts.any? %>
+		<h3>Microposts (<%= @user.microposts.count %>)</h3>
+		<ol class="microposts">
+			<%= render @microposts %>
+		</ol>
+		<%= will_paginate @microposts %>
+	<% end %>
+</div>
