--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,21 @@
+<% if logged_in? %>
+	<div class="row">
+		<aside>
+			<section class="user_info">
+				<%= render 'shared/user_info' %>
+			</section>
+			<section class="micropost_form">
+				<%= render 'shared/micropost_form' %>
+			</section>
+		</aside>
+	</div>
+<% else %>
+	<div class="jumbotron center">
+		<h1>Ruby on Rails Home page</h1>
+		<p>Know more about ruby at <a href="#">rubyonrails.com</a></p>
 
-<div class="jumbotron center">
-	<h1>Ruby on Rails Home page</h1>
-	<p>Know more about ruby at <a href="#">rubyonrails.com</a></p>
+		<%= link_to "Sign Up", signup_path , class: "btn btn-lg btn-primary" %>
+	</div>
 
-	<%= link_to "Sign Up", signup_path , class: "btn btn-lg btn-primary" %>
-</div>
-
-<%= image_tag("kitten.jpg") %>
+	<%= image_tag("kitten.jpg") %>
+<%end%>
