--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -2,8 +2,8 @@
 
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
-		<%= render 'shared/error_messages' %>
 		<%= form_for(@user, url: password_reset_path) do |f| %>
+			<%= render 'shared/error_messages', object: f.object %>
 			<%= hidden_field_tag :email, @user.email %>
 
 			<%= f.label :password %>
